# ChangeLog for sys-fs/simple-mtpfs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/simple-mtpfs/ChangeLog,v 1.4 2013/03/31 14:49:31 scarabeus Exp $

  31 Mar 2013; Tomáš Chvátal <scarabeus@gentoo.org> simple-mtpfs-0.1.ebuild:
  Stable on amd64 and x86. Way way better than mtpfs itself.

  21 Mar 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  simple-mtpfs-0.1.ebuild:
  doman is no longer needed so simplify ebuild a bit more

  21 Mar 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  simple-mtpfs-0.1.ebuild:
  Move to EAPI 5, add missing pkgconfig dependencies and simplify ebuild

*simple-mtpfs-0.1 (20 Mar 2013)

  20 Mar 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +simple-mtpfs-0.1.ebuild, +metadata.xml:
  New ebuild for simple-mtpfs, a FUSE MTP implementation written in C++