@@ -3,22 +3,23 @@ Hash: SHA256
 
 DIST simple-mtpfs-0.1.tar.gz 116145 SHA256 052618c742e7b3faa95e1c84e8b9e1df1517dccb9460f538bb032223243588a1 SHA512 5c4b390c43ede521061c677b496d47376304a4625414853a2183a41cb4a2c67361ecd7e26d0b6197cc78e84d0a9c99ec92e85bd1c179784b5a7c06ae05ede308 WHIRLPOOL 4df83ffc56339df76124e22f93df8fcf188cad30da83f8a9349e5a8ad8ff64010a0d118bcd4a9719ee0e9a5e3cf2fd997af6f3220951792a5e8f00da3d4a0291
 EBUILD simple-mtpfs-0.1.ebuild 612 SHA256 0ad0d00866a8159c466e0814c0966c5d69fafbc3226a5dfcaaf5645752e80f1b SHA512 e4f7a0cbc99f7b5b7b106d71826564551534743ced870403cccae964281766f1347b478531fb1cf8f1dc2907ed0ad90e72c57e2050f27b4864d9405813f23bad WHIRLPOOL 25b5d4ccd568156be2cd7dfeb6133c5dc1566fef375937047f404ebd5694b47593185b7c43befe6dfef3fcb61060064ebd466340d9c0f5324c5a4fe0a50a4a16
-MISC ChangeLog 874 SHA256 df362351193673a91cd119c7c6d0343aa7a51740bf43fe495f46ff826788c09b SHA512 0ebb03bf0f800600c6b0100c3c5cdca190c49a8771df109f78e4b5517a340c4b3d477de9112a30c4b82e379f574daae075fc92155ff478873269ad2a8764d3c7 WHIRLPOOL 89f6fce36d8d69bfd5c76e41154c4916ae3cb38b43d956063d07d71edeb45ebae6074fdb9649d1ffae7aa5a1a64078476c2532878338d610621304d972585074
+EBUILD simple-mtpfs-9999.ebuild 697 SHA256 f2e0642627afadfd8d555f1ccb4ed60ac412a067d799f1f7da502c9ddda3b0ad SHA512 e31fc13571b5616f7e1e46014987b1ef00f8e401bb7684f9e4f4762ccfd3a7b9f4b39694cf237c4f37f15c2757f226eb09bb6c9a94f65fa338bb2a351e52af20 WHIRLPOOL 7bf1aa86eed6355f3e218ff8caf934981898851a311a96ebf97a9ca0ad2ec2e35a036cdd1472a2ae9d2ed1acae7d35aa21bf6c507bf1b77206b0fca3a435bc28
+MISC ChangeLog 1022 SHA256 30ca90921836b3bd5d2edc91a18c236a6a6aca965a70b65a298f8d7740a698a5 SHA512 35762991ff20554ea80a5e63b2b88afdc917bc73ea7ea794673c7b6a344d67993916017b7bcdad547c4d97b39cb6d57db0574e910560b89f95cfc2c6fd43b587 WHIRLPOOL 059dd4df984bf124512d72452fd2310a73d54697da2d92727da9aee9ec0978944f3d9f02287c938348bb20b00e2e355f55f588b19e6a805ed413710e43d5f9df
 MISC metadata.xml 794 SHA256 9cdc95f72fed2b62d78321c9cccc5d6b0ccddf5c0e7adf4c7b9d838279c45509 SHA512 544565f31433f1a1c82bf188e40c72d8d105388c4e1ffc6be69e78ccac5c7f9bd6a4944cc8af150ad53462d06673bb13c6e54a8deaf3bdf3489f746d604f253b WHIRLPOOL 786dd675c67dc2f865a4d423036962b956d29f7c0ec77307d22522c0d2e860b69164d27b13d5c7e3a4c997563a54b283f4576ba0738382d7866dfec271a614d2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRWE0DAAoJEOSiRoyO7jvoIYkP/3F7Thi+UzxJOVmlSREwa1Ds
-MNZck6UwaMhwwZ/CZXqu3ugfQNL0vqNgqHpzVlPMhG+kuMeysklcHHqe+1iQ2n+1
-BY3lJpom/KSnekheig0IwF0L+Tu7avFdPT5X3WZtBUYlEx6tdwQiWlA4KJRynzgg
-C+7nts9LnNFq1Pdja69GRBzSEROg5TGrbUOH/8C1qf0q/tPIOGMVCqBsBibPoDm/
-M3OtWGTEesklw94QYJ+sT71j38P60219VO+dFm9YwgNyBGQjtihgKR1QlrA+wERD
-dBW/9odr3341R7V4pGrh5ScSO4A2x8luJXGjO6lAR1fRJNbFHwsUwlkijtjTIiID
-KW3KK49q/2e2w9ggPo0Sy5l7M+lbSrCUTbL8b012t0z0m3BkmjV3Mz9ARDxoDEtq
-PB0aZoVRK6WPk3Tjp0jYkfLFUegzn5+XIXlOCWB6RelXxS1Mfbfb619ylN3qFYeN
-mUfguXStsQCWh8x8O5cn4BPoYY0R9P9yNkzmN30lBBLd4tpnY7rhyvMgaX6h2/x0
-vDT+R9mldxRkauk+GoJRhUWqFtf+5vLuoF4vT+9OyED7zbXc1+x+DcKBCjPvTkaB
-LgwV4KXHcMk1Yd8bvqzgNc55GaxYbn+RWTggmG5IyAjwm1emjxHxESUoa3/UoMEO
-OQTuYMfWsNEkqGyIP6yE
-=MYm5
+iQIcBAEBCAAGBQJRX86/AAoJEOSiRoyO7jvo/VYP/1EhXFyryG70MuB+360VqKQt
+c9JIcDSrCNrpSnTNqKr1O+Xi1PYUR321f/Z1pUZPLEeEnL+W4+0yKJNXgG5QkpXl
+gnolq701KL3t/E3bect4A5hHF9x+ymeT8XpFNogp2rHxJ5Jnezl4Zg43zDksoXrb
+lktC0d8zjEY2JDuXS+JQSa0fjoFFy5KjDvc8I/nCtrrvleHFoepzkz61QZzd0CLH
+aCvNlaLBoyeyYwawmtM7z36KegcSxufqcdrSBoBwWmNnxPAtW0cEZISZhOeDMAoY
+1ji6EyvsnklNSCBgUVqXD6RVcQf8uc5DrQbs5yCBS9VqhMqIFsjMbw0SxY6/LWtc
+DeN0QcTVIGjnunhU5Les96WsS1goeKPiNlF2fRfUfCkLeMIt2kJ1GLeiKper1s8Y
+yXod5P8TiiTMICBr+380G1wCUtFOFbc9B9FDM+j7LwECkxb7+IcgSditOQ7L226c
+WVgaGTtZYYeKkq2SFIo26U8+KmFeFBgj7K7sUtIRcaCIuWVfFzi2HG7dWQv7Fr0g
+8GIyEyn/eUCnybQfZt2VMt/7tsYmzVJiZacFOpV3rzIM9UZaV/xc6VcdWHUvWqLl
+L+f7OM3a6HthoRPlhUL6FbIyK2C1xEl339yH6bxBlHdwntWcAGl9CX1lB+lFXqH7
+jnzM5BfvwU4WniB4mXrC
+=41Vi
 -----END PGP SIGNATURE-----
