@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/simple-mtpfs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/simple-mtpfs/ChangeLog,v 1.4 2013/03/31 14:49:31 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/simple-mtpfs/ChangeLog,v 1.5 2013/04/06 07:28:50 scarabeus Exp $
+
+*simple-mtpfs-9999 (06 Apr 2013)
+
+  06 Apr 2013; Tomáš Chvátal <scarabeus@gentoo.org> +simple-mtpfs-9999.ebuild:
+  Add live ebuild for testing.
 
   31 Mar 2013; Tomáš Chvátal <scarabeus@gentoo.org> simple-mtpfs-0.1.ebuild:
   Stable on amd64 and x86. Way way better than mtpfs itself.
